# AI-agents

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
huggingface/smolagents/: README.md
mcp/: README.md  example_of_claude_config.json  pyproject.toml  weather.py
mcp/huggingface/smolagents/: requirements.txt
mcp/playwright-MCP/: README.md
pydantic_ai/: README.md  agent_with_tools.py  basic_usage.py  requirements.txt
pydantic_ai/bank_agent_with_db/: main.py
rag/multimodal_rag_system/: .env.example  README.md  main.py
rag/multimodal_rag_system/database/: chroma.sqlite3
rag/postgres_rag/: .env.example  README.md  docker-compose.yml  init-db.sql  requirements.txt  simple.py
rag/postgres_rag/data/: .gitkeep
rag/supabase/: function.sql  main.py
src/: __init__.py  graph.py  nodes.py  state.py
src/google-adk/adk-streaming/: README.md
src/google-adk/adk-streaming/app/: main.py
src/google-adk/adk-streaming/app/google_search_agent/: agent.py
src/google-adk/adk-streaming/app/static/: index.html
src/huggingface/smolagents/: main.py
src/mcp/api/: .env.example  README.md  mini.py  requirements.txt  test_server.py  test_with_anthropic.py
src/parsers/docling/multimodal/: README.md  main_with_images.py
src/parsers/docling/multimodal/output/: pdf-example_inline.md
src/parsers/docling/simple/: main.py
src/pydantic_ai/: agent_with_graph.py  requirements.txt  weather_agent_with_fetch.py
src/pydantic_ai/bank_agent_with_db/: README.md  docker-compose.yml  init-db.sql
src/rag/multimodal_rag_system/: README.md  requirements.txt
src/rag/postgres_rag/: custom_retvieval_function.py  init-db.sql
src/structuded-data-agent/: langgraph.json  main.py
src/structuded-data-agent/src/: schemas.py
src/swarms/langgraph_swarm/: main.py
src/swarms/openai_swarm/: app.py  main.py
swarms/langgraph_swarm/: README.md
swarms/openai_swarm/: README.md
web/app/: page.tsx
web/components/: chat-interface.tsx
