[project]
name = "ai-agents"
version = "0.1.0"
description = ""
authors = [
    {name = "laguagu",email = "49702497+laguagu@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langgraph (>=0.0.36)",
    "langchain-core (>=0.1.0)",
    "langchain-openai (>=0.0.1)",
    "typing-extensions (>=4.5.0)",
    "pydantic (>=2.0.0)",
    "python-dotenv (>=1.0.0)",
    "swarm @ git+https://github.com/openai/swarm.git",
    "fastapi (>=0.115.8)",
    "uvicorn (>=0.34.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
